[package]
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
build = "build.rs"
categories = ["development-tools"]
description = "Bisects rustc toolchains with rustup"
keywords = ["rustup"]
license = "MIT OR Apache-2.0"
name = "cargo-bisect-rustc"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo-bisect-rustc"
version = "0.6.3"
edition = "2021"

[dependencies]
dialoguer = "0.6.2"
home = "0.5"
env_logger = "0.7.1"
thiserror = "1"
anyhow = "1"
flate2 = "1.0.14"
git2 = "0.13.5"
log = "0.4"
pbr = "1.0.2"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
rustc_version = "0.2.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.14"
tar = "0.4"
tee = "0.1"
tempdir = "0.3.7"
xz2 = "0.1.6"
chrono = "0.4.11"
colored = "2"

[dev-dependencies]
quickcheck = "0.9.2"
trycmd = "0.13.4"
