[package]
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
build = "build.rs"
categories = ["development-tools"]
description = "Bisects rustc toolchains with rustup"
keywords = ["rustup"]
license = "MIT OR Apache-2.0"
name = "cargo-bisect-rustc"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo-bisect-rustc"
version = "0.6.8"
edition = "2021"

[profile.release]
strip = "symbols"
lto = "fat"

[dependencies]
dialoguer = { version = "0.11.0", default-features = false }
home = "0.5"
env_logger = "0.11.0"
thiserror = "1"
anyhow = "1"
flate2 = "1.0.24"
git2 = "0.18.0"
log = "0.4"
pbr = "1.1.1"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
rustc_version = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
tar = "0.4"
tee = "0.1"
tempfile = "3"
xz2 = "0.1.7"
chrono = "0.4.22"
colored = "2"
regex = "1.10.1"

[dev-dependencies]
quickcheck = "1"
trycmd = "0.14.0"
